@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod
-mod_version=2.9.5
+mod_version=2.10.0
 mod_group=com.robertx22
 mod_id=mmorpg
 mod_name=Mine and Slash
@@ -14,9 +14,9 @@ mod_description=Turn Minecraft into a Hack and Slash Looter!
 mod_icon=logo.png
 
 # Forge / Minecraft
-version_forge=1.14.4-28.1.109
+version_forge=1.14.4-28.1.111
 version_minecraft=1.14.4
-version_mcp=20191231-1.14.3
+version_mcp=20200102-1.14.3
 
 # Mod Dependencies
 version_curios=FORGE-1.14.4-1.0.6
