@@ -4,6 +4,7 @@ import com.robertx22.mine_and_slash.mmorpg.Ref;
 import com.robertx22.mine_and_slash.uncommon.interfaces.IAutoLocName;
 
 public enum Words implements IAutoLocName {
+    PressAltForStatInfo("Press Alt for Stat Info"),
     MustBeMap("Must be an Adventure Map"),
     MustBeGear("Must be a Gear Item"),
     NotSpell("Not a Spell Item"),
