@@ -96,6 +96,34 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+	"item.mmorpg.spell_acid_bomb": "§cVenom Bomb",
+	"item.mmorpg.spell_acidbolt": "§cVenom Bolt",
+	"item.mmorpg.spell_acidexplosion": "§cVenom Explosion",
+	"item.mmorpg.spell_fire_bomb": "§cFlame Bomb",
+	"item.mmorpg.spell_fire_nova": "§cFlame Nova",
+	"item.mmorpg.spell_firebolt": "§cFlame Bolt",
+	"item.mmorpg.spell_flameexplosion": "§cFlame Explosion",
+	"item.mmorpg.spell_frost_nova": "§cFrost Nova",
+	"item.mmorpg.spell_frostbolt": "§cFrost Bolt",
+	"item.mmorpg.spell_frostexplosion": "§cFrost Explosion",
+	"item.mmorpg.spell_ice_bomb": "§cFrost Bomb",
+	"item.mmorpg.spell_instantheal": "§cInstant Heal",
+	"item.mmorpg.spell_lightningexplosion": "§cLightning Explosion",
+	"item.mmorpg.spell_poison_nova": "§cVenom Nova",
+	"item.mmorpg.spell_self_regen": "§cRegenerate",
+	"item.mmorpg.spell_thunder_bomb": "§cLightning Bomb",
+	"item.mmorpg.spell_thunder_nova": "§cLightning Nova",
+	"item.mmorpg.spell_thunderbolt": "§cLightning Bolt",
+	"item.mmorpg.spells.extra_flame_dmg": "§cExtra Flame Damage",
+	"item.mmorpg.spells.extra_frost_dmg": "§cExtra Frost Damage",
+	"item.mmorpg.spells.extra_lightning_dmg": "§cExtra Lightning Damage",
+	"item.mmorpg.spells.extra_venom_dmg": "§cExtra Venom Damage",
+
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
 "_comment": " [CATEGORY]: ALCHEMY - NAMES",
 
 	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "§7Minor Energy Regen Buff Potion ",
@@ -146,34 +174,6 @@
 	"item.mmorpg.alchemy.instant.misc.reset_talents": "§7Minor Potion of Reset Talents",
 
 "_comment": " [CATEGORY]: ALCHEMY - NAMES",
-
-
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-	"item.mmorpg.spell_acid_bomb": "§cVenom Bomb",
-	"item.mmorpg.spell_acidbolt": "§cVenom Bolt",
-	"item.mmorpg.spell_acidexplosion": "§cVenom Explosion",
-	"item.mmorpg.spell_fire_bomb": "§cFlame Bomb",
-	"item.mmorpg.spell_fire_nova": "§cFlame Nova",
-	"item.mmorpg.spell_firebolt": "§cFlame Bolt",
-	"item.mmorpg.spell_flameexplosion": "§cFlame Explosion",
-	"item.mmorpg.spell_frost_nova": "§cFrost Nova",
-	"item.mmorpg.spell_frostbolt": "§cFrost Bolt",
-	"item.mmorpg.spell_frostexplosion": "§cFrost Explosion",
-	"item.mmorpg.spell_ice_bomb": "§cFrost Bomb",
-	"item.mmorpg.spell_instantheal": "§cInstant Heal",
-	"item.mmorpg.spell_lightningexplosion": "§cLightning Explosion",
-	"item.mmorpg.spell_poison_nova": "§cVenom Nova",
-	"item.mmorpg.spell_self_regen": "§cRegenerate",
-	"item.mmorpg.spell_thunder_bomb": "§cLightning Bomb",
-	"item.mmorpg.spell_thunder_nova": "§cLightning Nova",
-	"item.mmorpg.spell_thunderbolt": "§cLightning Bolt",
-	"item.mmorpg.spells.extra_flame_dmg": "§cExtra Flame Damage",
-	"item.mmorpg.spells.extra_frost_dmg": "§cExtra Frost Damage",
-	"item.mmorpg.spells.extra_lightning_dmg": "§cExtra Lightning Damage",
-	"item.mmorpg.spells.extra_venom_dmg": "§cExtra Venom Damage",
-
-"_comment": " [CATEGORY]: SPELLS - NAMES",
 
 
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
@@ -613,6 +613,7 @@
 	"mmorpg.word.prefix": "Prefix",
 	"mmorpg.word.press_shift_for_more_info": "Press Shift For More Info",
 	"mmorpg.word.press_shift_for_setup_info": "Press Shift For Setup Info",
+	"mmorpg.word.pressaltforstatinfo": "Press Alt for Stat Info",
 	"mmorpg.word.pressshiftforrequirements": "Press Shift for Requirements",
 	"mmorpg.word.primary_stats": "Primary Stats",
 	"mmorpg.word.progress": "Progress",
@@ -1081,6 +1082,47 @@
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.aoe_regen": "Aoe Regen",
+	"effect.mmorpg.bleed": "Bleed",
+	"effect.mmorpg.bonus_flame_dmg": "+ Flame Dmg",
+	"effect.mmorpg.bonus_frost_dmg": "+ Frost Dmg",
+	"effect.mmorpg.bonus_lightning_dmg": "+ Lightning Dmg",
+	"effect.mmorpg.bonus_venom_dmg": "+ Venom Dmg",
+	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
+	"effect.mmorpg.energy_regen": "Regen Energy",
+	"effect.mmorpg.mana_regen": "Regen Mana",
+	"effect.mmorpg.self_regen": "Regenerate",
+	"effect.mmorpg.teleport_protection": "Teleport Guard",
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 	"item.mmorpg.bracelet.bracelet0": "§7Bracelet",
@@ -1235,47 +1277,6 @@
 	"item.mmorpg.wand.wand5": "§dWand",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
-
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.aoe_regen": "Aoe Regen",
-	"effect.mmorpg.bleed": "Bleed",
-	"effect.mmorpg.bonus_flame_dmg": "+ Flame Dmg",
-	"effect.mmorpg.bonus_frost_dmg": "+ Frost Dmg",
-	"effect.mmorpg.bonus_lightning_dmg": "+ Lightning Dmg",
-	"effect.mmorpg.bonus_venom_dmg": "+ Venom Dmg",
-	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
-	"effect.mmorpg.energy_regen": "Regen Energy",
-	"effect.mmorpg.mana_regen": "Regen Mana",
-	"effect.mmorpg.self_regen": "Regenerate",
-	"effect.mmorpg.teleport_protection": "Teleport Guard",
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: WORLD TYPES - NAMES",
